--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "chronologic"
     ],
     "replace": {
-        "kohlercode/ce-timeline": "self.version"
+        "fullstackfreelancer/ce-timeline": "self.version"
     },
     "extra": {
         "typo3/cms": {
